# practice_c-

./: CMakeLists.txt
inc/: actor.h  customer.h  info.h  manager.h  order.h
src/: customer.cpp  info.cpp  main.cpp  manager.cpp  order.cpp
